v1.10.1 (Expected around 2024-11-01)
====================

- Propagate general plotting keywords in Potential.plot/plotPotentials.

- Added the generalized particle-spray model as galpy.df.basestreamspraydf with two
  subclasses: chen24spraydf and fadal15spraydf. Enabled integrating orbits of stream
  particles with the progenitor's potential. Deprecating the old particle-spray
  model galpy.df.streamspraydf.

v1.10.0 (2024-07-07)
====================

- Increased support for using OpenMP with clang and, in particular, added OpenMP support
  in the released Mac wheels.

- Removed explicit support for using Intel compilers.

- Switch to using Ruff as the code formatter.

v1.9.2 (2024-03-04)
===================

- Added KuzminLikeWrapperPotential, a potential wrapper that allows
  one to make a Kuzmin-like or Miyamoto-Nagai-like potential out of any
  spherical or axisymmetric potential (evaluated in the plane, i.e.,
  treated as a spherical potential). Kuzmin-like potentials are obtained by
  replacing the spherical radius r with \sqrt(R^2 + (a + |z|^2)), while
  Miyamoto-Nagai-like potentials are obtained by replacing the spherical
  radius with \sqrt(R^2 + (a + \sqrt(z^2 + b^2))^2). The standard KuzminDiskPotential
  and MiyamotoNagaiPotential are obtained by applying this procedure to a point-mass
  potential and the Kuzmin/Miyamoto-Nagai-like potentials generalize this to any
  spherical potential.

v1.9.1 (2023-11-06)
===================

- Allow vector inputs of solar parameters to Orbit initialization: ro, zo, vo,
  and solarmotion (#595). Useful when sampling over the uncertainty in the solar
  parameters.

- Converted all docstrings to numpy-style format with the help of GitHub Copilot.

v1.9.0 (2023-07-02)
===================

- Add specialized integration method to determine surfaces of sections of orbits and
  add Orbit.SOS and Orbit.plotSOS methods to compute and plot the surface of section
  of an orbit.
